Add total minutes to recipes and fix recipes searches
