# app/controllers/api/v1/recipes_controller.rb
@@ -30,6 +30,7 @@ module Api
           :license,
           :source_url,
           :title,
+          :total_minutes,
           ingredients_attributes: [
             :name,
             :quantity,
