# app/models/recipe.rb
@@ -2,14 +2,15 @@
 #
 # Table name: recipes
 #
-#  id         :uuid             not null, primary key
-#  author     :string
-#  content    :text
-#  license    :string
-#  source_url :string
-#  title      :string
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id            :uuid             not null, primary key
+#  author        :string
+#  content       :text
+#  license       :string
+#  source_url    :string
+#  title         :string
+#  total_minutes :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
 #
 class Recipe < ApplicationRecord
   include PgSearch::Model
