# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2022_03_19_185327) do
+ActiveRecord::Schema[7.0].define(version: 2022_03_20_155123) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pgcrypto"
   enable_extension "plpgsql"
@@ -60,6 +60,7 @@ ActiveRecord::Schema[7.0].define(version: 2022_03_19_185327) do
     t.string "author"
     t.string "license"
     t.string "source_url"
+    t.integer "total_minutes"
   end
 
   add_foreign_key "ingredients", "foods"
